
           This file summarizes changes made since 5.0

Version 5.34.5

Fixed: Monit may hang on exit, if a program executed by "check program" was pending while monit tried to quit (regression from Monit 5.34.1).

Fixed: Issue #1115: Service checks may sporadicaly hang if the PID is recycled by the system quickly, e.g. due to PID randomization (regression from Monit 5.34.1).

Fixed: Monit HTTP interface didn't parse the password file (regression from monit 5.34.4). Thanks to Francisco Javier Felix Belmonte.

Fixed: MacOS: When "check network" is used, but no network interfaces are found, monit terminates with "AssertException: nbytes > 0  raised in Mem_calloc"

Fixed: The loadavg test in the process check context didn't work. Error like this was logged by monit each time the test was executed:
         'myservice' error -- unknown resource ID: [5]

Fixed: MacOS + DragonflyBSD + FreeBSD + NetBSD + OpenBSD: If there are no mounted filesystems and a "check filesystem" is used, monit would terminate with
       "AssertException: count > 0 raised in Mem_calloc"

Fixed: FreeBSD + OpenBSD + NetBSD: Detect presence of backtrace() function during compilation (used in monit -vv mode to print backtrace)

New: When monit aborts (e.g. due to assert), print a backtrace.


Version 5.34.4

Fixed: If the Monit configuration file contains a string with unbalanced escape sequences, Monit may crash upon startup.

Fixed: If the password in the "set mmonit" URL contains only binary characters, syntax check passed (-t), but Monit aborts after start and reports following error:
        AssertException: n >= 0
         raised in Str_ndup at src/util/Str.c:315
        Aborted

Fixed: If the "every <cron>" statement contained a syntax error, syntax check passed (-t), but Monit aborts after start and reports following error:
        AssertException: n < 5 && n >= 0
         raised in Time_incron at src/system/Time.c:1566
        Aborted
